--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 TODO
 
-* restart stuff when something shit happens.
+* restart stuff when shit happens.
 
 * use OTP behaviors (need to level up on erlang first).
 
